Sanitize sanitize func in helpers

--- a/project1.ipynb
+++ b/project1.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Useful starting lines\n",
     "%matplotlib inline\n",
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -55,129 +64,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1.001792107451957\n",
-      "0.021304973616162473\n",
-      "1.0444020546842818\n",
-      "2.0674991357524015\n"
-     ]
-    }
-   ],
-   "source": [
-    "# JULES FLO: si on sanitize après il y avait des nan jsp pourquoi, amdahl\n",
-    "sanitized_x = sanitize(x)\n",
-    "y = y.reshape((y.shape[0], 1))\n",
-    "\n",
-    "feature_22 = sanitized_x[:, 22]\n",
-    "x_minus_22 = sanitized_x[:, np.array(range(x.shape[1])) != 22]\n",
-    "x_sep = []\n",
-    "y_sep = []\n",
-    "\n",
-    "for i in np.unique(feature_22):\n",
-    "    print(i)\n",
-    "    x_sep.append(x_minus_22[feature_22 == i, :])\n",
-    "    y_sep.append(y[feature_22 == i, :])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(99913, 1)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_sep[0].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([[ 0.38476846,  0.9103791 , -0.00585329, ...,  0.        ,\n",
-       "          0.        , -0.74543941],\n",
-       "        [ 0.94253641, -0.91455619,  1.31336873, ...,  0.        ,\n",
-       "          0.        , -0.74543941],\n",
-       "        [-0.28385846,  0.03732318,  0.48512597, ...,  0.        ,\n",
-       "          0.        , -0.74543941],\n",
-       "        ...,\n",
-       "        [ 0.        ,  0.2529135 , -0.32082851, ...,  0.        ,\n",
-       "          0.        , -0.74543941],\n",
-       "        [-0.46960659, -0.84532397, -0.30297338, ...,  0.        ,\n",
-       "          0.        , -0.74543941],\n",
-       "        [ 0.        ,  0.66533608, -0.25352276, ...,  0.        ,\n",
-       "          0.        , -0.74543941]]),\n",
-       " array([[ 0.68202131,  0.55250482,  0.54013641, ...,  0.        ,\n",
-       "          0.        , -0.27381996],\n",
-       "        [ 0.        ,  3.19515553,  1.09655998, ...,  0.        ,\n",
-       "          0.        , -0.29396985],\n",
-       "        [ 0.57693915, -1.09837382,  0.33143472, ...,  0.        ,\n",
-       "          0.        , -0.43285609],\n",
-       "        ...,\n",
-       "        [ 0.        ,  0.8209459 , -0.03632212, ...,  0.        ,\n",
-       "          0.        ,  0.0603926 ],\n",
-       "        [ 0.2024236 ,  0.80068833,  0.19121441, ...,  0.        ,\n",
-       "          0.        , -0.02138021],\n",
-       "        [-0.28624947,  0.31931645, -0.13086367, ...,  0.        ,\n",
-       "          0.        , -0.31701723]]),\n",
-       " array([[ 0.28991353,  0.06833197,  0.40768027, ...,  0.61614788,\n",
-       "         -1.36131161,  0.4125105 ],\n",
-       "        [ 0.46939617, -0.57654339,  0.6515044 , ...,  0.07030726,\n",
-       "         -1.52202162,  1.08975056],\n",
-       "        [ 0.34246334, -1.37230367,  0.7445519 , ..., -0.38693885,\n",
-       "         -1.5319284 ,  2.09093949],\n",
-       "        ...,\n",
-       "        [-0.03358804, -0.8250664 ,  0.18538516, ..., -0.84320058,\n",
-       "         -1.51596748,  0.40680732],\n",
-       "        [ 0.07491483, -0.57198826,  0.34475871, ..., -0.2889927 ,\n",
-       "         -1.38883045,  1.22464764],\n",
-       "        [ 1.66081601, -0.05895686, -0.44963525, ..., -0.02271698,\n",
-       "         -0.62490751,  1.03158627]]),\n",
-       " array([[-5.60482326e-01, -1.00976110e+00, -5.39645661e-01, ...,\n",
-       "          1.16081087e-01,  1.71034105e+00,  1.23037122e+00],\n",
-       "        [-1.24167086e-01, -1.10210845e+00, -1.33974234e-01, ...,\n",
-       "          8.78486067e-01, -1.14336242e+00,  9.44497970e-01],\n",
-       "        [-3.09833316e-03, -1.22221093e+00, -1.95450735e-01, ...,\n",
-       "         -6.12854856e-01, -3.34308588e-01,  1.84048922e+00],\n",
-       "        ...,\n",
-       "        [ 0.00000000e+00,  9.79809367e-01, -1.57000161e+00, ...,\n",
-       "          1.51685873e+00,  8.88078183e-01,  2.02792903e+00],\n",
-       "        [ 0.00000000e+00, -3.15656463e-01,  1.63803773e+01, ...,\n",
-       "          2.59308879e-01,  2.29827585e-01,  1.33146751e+00],\n",
-       "        [ 1.43398872e-01, -1.28227632e+00, -3.52717911e-01, ...,\n",
-       "          2.90316957e-01, -1.21821366e+00,  4.82578340e+00]])]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x_sep"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
    "outputs": [
@@ -185,16 +71,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration : 0 with loss 5.172329698511052 and gradient norm: 5.034999302187731\n",
-      "Iteration : 250 with loss 0.31697327454101987 and gradient norm: 0.203492622292176\n",
-      "Iteration : 500 with loss 0.2811813128078066 and gradient norm: 0.05816661615871858\n",
-      "Iteration : 750 with loss 0.27709930561786345 and gradient norm: 0.02813249572218435\n"
+      "0.0\n",
+      "1.0\n",
+      "2.0\n",
+      "3.0\n"
      ]
     }
    ],
    "source": [
-    "w_init = np.random.rand(x_sep[0].shape[1], 1)\n",
-    "w, loss = least_squares_GD(y_sep[0], x_sep[0], w_init, 1000, 0.01, verbose=True)"
+    "sanitized_x = sanitize(x)\n",
+    "y = y.reshape((y.shape[0], 1))\n",
+    "\n",
+    "feature_22 = sanitized_x[:, 22]\n",
+    "x_minus_22 = sanitized_x[:, np.array(range(sanitized_x.shape[1])) != 22]\n",
+    "x_sep = []\n",
+    "y_sep = []\n",
+    "\n",
+    "for i in np.unique(feature_22):\n",
+    "    print(i)\n",
+    "    x_sep.append(x_minus_22[feature_22 == i, :])\n",
+    "    y_sep.append(y[feature_22 == i, :])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration : 0 with loss 7.904257110444684 and gradient norm: 5.9145839170478895\n",
+      "Iteration : 250 with loss 0.2729126189015163 and gradient norm: 0.006538765436612333\n",
+      "Iteration : 500 with loss 0.2723851038093433 and gradient norm: 0.0032261998004240763\n",
+      "Iteration : 750 with loss 0.27222545231901113 and gradient norm: 0.0018971405518997612\n",
+      "Iteration : 1000 with loss 0.2721693309557731 and gradient norm: 0.001132208637022638\n",
+      "Iteration : 1250 with loss 0.27214927823770474 and gradient norm: 0.0006777310436834496\n",
+      "Iteration : 1500 with loss 0.27214208772700405 and gradient norm: 0.00040596948359918403\n",
+      "Iteration : 1750 with loss 0.27213950720027447 and gradient norm: 0.00024322117567043692\n",
+      "Iteration : 2000 with loss 0.2721385809199796 and gradient norm: 0.00014572241540480177\n",
+      "Iteration : 2250 with loss 0.27213824841615514 and gradient norm: 8.730826249046025e-05\n",
+      "Iteration : 2500 with loss 0.27213812905703216 and gradient norm: 5.2310066820892636e-05\n",
+      "Iteration : 2750 with loss 0.27213808621049634 and gradient norm: 3.1341186017601384e-05\n",
+      "Iteration : 3000 with loss 0.27213807082979724 and gradient norm: 1.877783990362236e-05\n",
+      "Iteration : 3250 with loss 0.2721380653085589 and gradient norm: 1.1250604284952795e-05\n",
+      "Iteration : 3500 with loss 0.27213806332658946 and gradient norm: 6.740716635508965e-06\n",
+      "Iteration : 3750 with loss 0.27213806261511825 and gradient norm: 4.038650713247704e-06\n",
+      "Iteration : 4000 with loss 0.27213806235972 and gradient norm: 2.419727850836584e-06\n",
+      "Iteration : 4250 with loss 0.27213806226803916 and gradient norm: 1.4497621795187956e-06\n",
+      "Iteration : 4500 with loss 0.2721380622351283 and gradient norm: 8.686144452942608e-07\n",
+      "Iteration : 4750 with loss 0.2721380622233143 and gradient norm: 5.204241446881691e-07\n",
+      "Iteration : 0 with loss 6.212215948099324 and gradient norm: 5.220388154863248\n",
+      "Iteration : 250 with loss 0.38377432044793125 and gradient norm: 0.01320342377626559\n",
+      "Iteration : 500 with loss 0.3812179145242702 and gradient norm: 0.008761922354933829\n",
+      "Iteration : 750 with loss 0.3795106967356996 and gradient norm: 0.007798389297018504\n",
+      "Iteration : 1000 with loss 0.3781471953124391 and gradient norm: 0.006978137496914861\n",
+      "Iteration : 1250 with loss 0.3770553137379607 and gradient norm: 0.006244640545655622\n",
+      "Iteration : 1500 with loss 0.37618090963289674 and gradient norm: 0.005588251006348398\n",
+      "Iteration : 1750 with loss 0.37548066606535935 and gradient norm: 0.005000856342953345\n",
+      "Iteration : 2000 with loss 0.3749198943800795 and gradient norm: 0.004475204169071961\n",
+      "Iteration : 2250 with loss 0.37447081509118274 and gradient norm: 0.004004804574181684\n",
+      "Iteration : 2500 with loss 0.37411118172696983 and gradient norm: 0.0035838498248566505\n",
+      "Iteration : 2750 with loss 0.3738231787843852 and gradient norm: 0.0032071426530870008\n",
+      "Iteration : 3000 with loss 0.3735925391853062 and gradient norm: 0.0028700320883740423\n",
+      "Iteration : 3250 with loss 0.37340783751460116 and gradient norm: 0.0025683560350427057\n",
+      "Iteration : 3500 with loss 0.3732599240283765 and gradient norm: 0.0022983898854173714\n",
+      "Iteration : 3750 with loss 0.37314147139433357 and gradient norm: 0.00205680053439439\n",
+      "Iteration : 4000 with loss 0.3730466117106776 and gradient norm: 0.0018406052276543337\n",
+      "Iteration : 4250 with loss 0.37297064582223594 and gradient norm: 0.0016471347354389682\n",
+      "Iteration : 4500 with loss 0.37290981053389927 and gradient norm: 0.0014740003972221547\n",
+      "Iteration : 4750 with loss 0.3728610921896142 and gradient norm: 0.0013190646303952787\n",
+      "Iteration : 0 with loss 11.717424359899077 and gradient norm: 10.64926103220923\n",
+      "Iteration : 250 with loss 0.35557301362323207 and gradient norm: 0.0053135886438758885\n",
+      "Iteration : 500 with loss 0.355414576341577 and gradient norm: 0.0007804707290806841\n",
+      "Iteration : 750 with loss 0.3554099226882254 and gradient norm: 0.0001664300565648811\n",
+      "Iteration : 1000 with loss 0.35540970419456897 and gradient norm: 3.676968266817226e-05\n",
+      "Iteration : 1250 with loss 0.3554096934970278 and gradient norm: 8.151128862057534e-06\n",
+      "Iteration : 1500 with loss 0.355409692971168 and gradient norm: 1.8075485371026024e-06\n",
+      "Iteration : 1750 with loss 0.35540969294530805 and gradient norm: 4.0084519609727203e-07\n",
+      "Iteration : 2000 with loss 0.35540969294403635 and gradient norm: 8.889308242035856e-08\n",
+      "Iteration : 2250 with loss 0.35540969294397373 and gradient norm: 1.9716191214218997e-08\n",
+      "Iteration : 2500 with loss 0.3554096929439706 and gradient norm: 4.385988250027551e-09\n",
+      "Iteration : 2750 with loss 0.3554096929439705 and gradient norm: 1.0323866044547633e-09\n",
+      "Iteration : 3000 with loss 0.3554096929439705 and gradient norm: 4.149626075490417e-10\n",
+      "Iteration : 3250 with loss 0.3554096929439705 and gradient norm: 3.581153066515602e-10\n",
+      "Iteration : 3500 with loss 0.3554096929439705 and gradient norm: 3.550849284210778e-10\n",
+      "Iteration : 3750 with loss 0.35540969294397057 and gradient norm: 3.549352205820525e-10\n"
+     ]
+    }
+   ],
+   "source": [
+    "accuracies = []\n",
+    "weights = []\n",
+    "for i, x_chunk in enumerate(x_sep):\n",
+    "    w_init = np.random.rand(x_chunk.shape[1], 1)\n",
+    "    w, loss = least_squares_GD(y_sep[i], x_chunk, w_init, 5000, 0.1, verbose=True) \n",
+    "    y_pred = predict_labels(w, x_chunk)\n",
+    "    accuracies.append(compute_accuracy_linear_reg(y_sep[i], y_pred))\n",
+    "    weights.append(w)\n",
+    "    \n",
+    "accuracies"
    ]
   },
   {
@@ -336,62 +313,6 @@
     "    print(i,\":\")\n",
     "    print(\"Accuracy on training set\", compute_accuracy(ty, tx, w))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
