--- a/latex-report/report.tex
+++ b/latex-report/report.tex
@@ -16,7 +16,9 @@
 
 \section{Introduction}
 
-\section{Pipeline}
+\section{Feature engineering}
+
+\section{Model choosing}
 
 \begin{enumerate}
 	\item{Copied 6 function we have to return from the labs}
