--- a/latex-report/report.tex
+++ b/latex-report/report.tex
@@ -15,7 +15,7 @@
 \maketitle
 
 \section{Introduction}
-
+In this project we try to determine if a given event's signature was the result of a Higgs boson (signal) or some other particle (background) thanks to a vector representing the decay signature of an event. The dataset is provided by the EPFL on the website AIcrowd and seperated into two parts: a test and a training set. Therefore, the goal is to choose an appropriate machine learning model, such as logistic regression, least squares or ridge regression and train it on the training set, in order to ultimately get the best results on the test set.
 \section{Feature engineering}
 
 \section{Model choosing}
