--- a/latex-report/report.tex
+++ b/latex-report/report.tex
@@ -2,6 +2,7 @@
 
 \usepackage{hyperref}
 \usepackage{graphicx}	% For figure environment
+\usepackage{subcaption}
 
 
 \begin{document}
@@ -17,6 +18,23 @@
 \section{Introduction}
 
 \section{Feature engineering}
+When we first loaded the raw data and ran a simple model, wether it be linear regression or logistic regression, we got an accuracy of 66\% on training. In fact the data is unbalanced, two thirds of the data points are not Higgs boson and the remaining third are Higgs boson. So it was as good as always saying no. We needed to process the data to improve our results. \\\\
+To do that we first used visualization tools, as we can gain a lot of insights on the data using visualization. Thus, we plotted the distribution of each feature. To have a better view of how the values are distributed we displayed them for each prediction, picking the same amout of $-1$ and $1$ predictions. Here is a typical example of which we learned a lot:
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width=\columnwidth]{graph-features/feature-06-raw.png}
+  \caption{The feature 06 before processing}
+	\label{fig:feature-06-raw}
+\end{figure} \\
+We noticed on figure \ref{fig:feature-06-raw} that the distribution is very strange and with this scale on the y-axis we can't really see exactly what's going on. But using this information and by going through the data there are features with many values set to exactly $-999$. Seems weird to have most of the values around 0 and a lot of them with exactly $-999$, we concluded that these values are in fact unknown.\\\\
+Knowing that, we decided to normalize the data without taking into account the $-999$ values and then setting the $-999$ values to $0$. That way they shouldn't have much impact on the decision, since $0 \times w$ will give 0, thus not contribute. You can see the plot at figure \ref{fig:feature-06-processed}.
+\begin{figure}[h!]
+	\centering
+  \includegraphics[width=\columnwidth]{graph-features/feature-06-processed.png}
+  \caption{The feature 06 after processing, not displaying the $-999$ values}
+	\label{fig:feature-06-processed}
+\end{figure}
+
 
 \section{Model choosing}
 
