Add further improvements section

--- a/latex-report/report.tex
+++ b/latex-report/report.tex
@@ -35,8 +35,9 @@ Knowing that, we decided to normalize the data without taking into account the $
 	\label{fig:feature-06-processed}
 \end{figure}
 
-
 \section{Model choosing}
+
+\section{Further improvements}
 
 \begin{enumerate}
 	\item{Copied 6 function we have to return from the labs}
