--- a/latex-report/report.tex
+++ b/latex-report/report.tex
@@ -19,6 +19,7 @@ In this project we try to determine if a given event's signature was the result 
 \section{Feature engineering}
 
 \section{Model choosing}
+The logistic regression seems to be inefficient on the dataset since 
 
 \begin{enumerate}
 	\item{Copied 6 function we have to return from the labs}
