--- a/latex-report/report.tex
+++ b/latex-report/report.tex
@@ -46,7 +46,11 @@ Another interesting thing we noticed, is that the 22nd feature is discrete. It o
 \section{Model choosing}
 The logistic regression seems to be inefficient on the data set since 
 
+\section{Conclusion}
+
+
 \section{Further improvements}
+To further improve the results we could try using other algorithms. We also noticed that some features have more unknown values to known values; some features look like uniform distribution or look like they don't give any information on the classification. We could try removing some of these features to reduce complexity. We could also dive into the actual physics behind the Higgs boson to have a better idea about what the best feature expansion looks like; we could try to add features that are redundant in the physics theory behind Higgs boson. There is always a lot more that can be done when working with machine learning, these are some clues we had while working on this project.
 
 \begin{enumerate}
 	\item{Copied 6 function we have to return from the labs}
