--- a/latex-report/report.tex
+++ b/latex-report/report.tex
@@ -42,8 +42,14 @@ Knowing that, we decided to normalize the data without taking into account the $
 Another interesting thing we noticed, is that the 22nd feature is discrete. It only has 4 values: ${0,1,2,3}$, we thought that maybe this feature represents some category. Maybe they represent different particles. So we tried to train them differently. By normalizing the data as specified and training these 4 categories differently we managed to get to $78\%$ accuracy on training.
 
 \section{Model choosing}
-The logistic regression seems to be inefficient on the data set since 
+The logistic regression seemed to be inefficient on the data set since the maximum value we obtained was around 71\%. Therefore, we decided to opt for a linear regression model. Since the matrix was not invertible when using the closed form formula from least squares, we chose the ridge regression and tried several values for the regularisation parameter lambda. The latter's optimal value ended up being quite small, i.e around 3.6*e-07. In order to compute a good approximation of the lambda we splited the train data set that was given and for which we already had the predictions into a new training and a validation set. We then ran ridge regression computing a solution for the new training set for each lambda between two bounds and using it on the validation set in order to know how well chosen the parameter was. The figure below illustrates this process \ref{fig:training-and-validation-set-accuracy}. Finally, gradient descent did not seem to improve the result, on the contrary we obtained lower accuracies.
 
+\begin{figure}[h!]
+	\centering
+  \includegraphics[width=\columnwidth]{validation.png}
+  \caption{The training and validation set accuracy}
+	\label{fig:training-and-validation-set-accuracy}
+\end{figure}
 \section{Conclusion}
 
 
