Fix typo report

--- a/latex-report/report.tex
+++ b/latex-report/report.tex
@@ -44,7 +44,7 @@ Another interesting thing we noticed, is that the 22nd feature is discrete. It o
 
 \section{Model choosing}
 \label{sec:model-choosing}
-The logistic regression seemed to be inefficient on the data set since the maximum value we obtained was around 71\%. Therefore, we decided to opt for a linear regression model. Since the matrix was not invertible when using the closed form formula from least squares, we chose the ridge regression and tried several values for the regularisation parameter lambda. The latter's optimal value ended up being quite small, i.e around 3.6*e-07. In order to compute a good approximation of the lambda we splited the train data set that was given and for which we already had the predictions into a new training and a validation set. We then ran ridge regression computing a solution for the new training set for each lambda between two bounds and using it on the validation set in order to know how well chosen the parameter was. The figure below illustrates this process \ref{fig:training-and-validation-set-accuracy}. Finally, gradient descent did not seem to improve the result, on the contrary we obtained lower accuracies.
+The logistic regression seemed to be inefficient on the data set since the maximum value we obtained was around 71\%. Therefore, we decided to opt for a linear regression model. Since the matrix was not invertible when using the closed form formula from least squares, we chose the ridge regression and tried several values for the regularization parameter lambda. The latter's optimal value ended up being quite small, i.e around 3.6*e-07. In order to compute a good approximation of the lambda we split the train data set that was given and for which we already had the predictions into a new training and a validation set. We then ran ridge regression computing a solution for the new training set for each lambda between two bounds and using it on the validation set in order to know how well chosen the parameter was. The figure below illustrates this process \ref{fig:training-and-validation-set-accuracy}. Finally, gradient descent did not seem to improve the result, on the contrary we obtained lower accuracies.
 
 \begin{figure}[h!]
 	\centering
@@ -53,7 +53,7 @@ The logistic regression seemed to be inefficient on the data set since the maxim
 	\label{fig:training-and-validation-set-accuracy}
 \end{figure}
 \section{Conclusion}
-In conclusion, we started with a $66\%$ accuracy with no feature processing because of the unbalanced data. Then, we managed to up it to $78\%$ by analyzing data and processing the features, as explained in section \ref{sec:feature-engineering}. Then we got up to $82\%$ by adding feature expansion and valdiation, as described in section \ref{sec:model-choosing}. We use linear regression and based on our observations, we concluded that feature engineering is really the key to have a more successful classifier, the algorithm comes next. We unfortunately underestimated the importance of cleaning and processing the data. We lost a bit of time in the beginning, because we were trying to change the algorithm we run instead to have better results instead of changing the input.
+In conclusion, we started with a $66\%$ accuracy with no feature processing because of the unbalanced data. Then, we managed to up it to $78\%$ by analyzing data and processing the features, as explained in section \ref{sec:feature-engineering}. Then we got up to $82\%$ by adding feature expansion and validation, as described in section \ref{sec:model-choosing}. We use linear regression and based on our observations, we concluded that feature engineering is really the key to have a more successful classifier, the algorithm comes next. We unfortunately underestimated the importance of cleaning and processing the data. We lost a bit of time in the beginning, because we were trying to change the algorithm we run instead to have better results instead of changing the input.
 
 \section{Further improvements}
 To further improve the results we could try using other algorithms. We also noticed that some features have more unknown values to known values; some features look like uniform distribution or look like they don't give any information on the classification. We could try removing some of these features to reduce complexity. We could also dive into the actual physics behind the Higgs boson to have a better idea about what the best feature expansion looks like; we could try to add features that are redundant in the physics theory behind Higgs boson. There is always a lot more that can be done when working with machine learning, these are some clues we had while working on this project.
