--- a/latex-report/report.tex
+++ b/latex-report/report.tex
@@ -18,6 +18,7 @@ In this project we try to determine if a given event's signature was the result 
 
 \section{Feature engineering}
 \label{sec:feature-engineering}
+\subsection{Data pre-processing}
 When we first loaded the raw data and ran a simple model, whether it be linear regression or logistic regression, we got an accuracy of $66\%$ on training. In fact the data is unbalanced, two thirds of the data points are not Higgs boson and the remaining third are Higgs boson. So it was as good as always saying no. We needed to process the data to improve our results. \\
 
 To do that we first used visualization tools, as we can gain a lot of insights on the data using visualization. Thus, we plotted the distribution of each feature. To have a better view of how the values are distributed we displayed them for each prediction, picking the same amount of $-1$ and $1$ predictions. Here is a typical example of which we learned a lot:
@@ -42,9 +43,22 @@ Knowing that, we decided to normalize the data without taking into account the $
 
 Another interesting thing we noticed, is that the 22nd feature is discrete. It only has 4 values: ${0,1,2,3}$, we thought that maybe this feature represents some category. Maybe they represent different particles. So we tried to train them differently. By normalizing the data as specified and training these 4 categories differently we managed to get to $78\%$ accuracy on training.
 
+\subsection{Feature expansion}
+\label{sec:feature-expansion}
+Then we managed to get to $82\%$ accuracy on training and testing by adding feature expansion. To do that we simply tried different basic functions and see which one improved the accuracy the most. We tried:
+
+\begin{itemize}
+	\item{Exponential}
+	\item{Polynomial expansion with and without cross-products}
+	\item{Cosinus}
+	\item{Sinus}
+	\item{Square root}
+\end{itemize}
+
+The ones that gave the best results were: cosinus, sinus, degree 4 and square root. Thus, we used these for feature expansion.
+
 \section{Model choosing}
-\label{sec:model-choosing}
-The logistic regression seemed to be inefficient on the data set since the maximum value we obtained was around 71\%. Therefore, we decided to opt for a linear regression model. Since the matrix was not invertible when using the closed form formula from least squares, we chose the ridge regression and tried several values for the regularization parameter lambda. The latter's optimal value ended up being quite small, i.e around 3.6*e-07. In order to compute a good approximation of the lambda we split the train data set that was given and for which we already had the predictions into a new training and a validation set. We then ran ridge regression computing a solution for the new training set for each lambda between two bounds and using it on the validation set in order to know how well chosen the parameter was. The figure below illustrates this process \ref{fig:training-and-validation-set-accuracy}. Finally, gradient descent did not seem to improve the result, on the contrary we obtained lower accuracies.
+The logistic regression seemed to be inefficient on the data set since the maximum value we obtained was around $71\%$. Therefore, we decided to opt for a linear regression model. Since the matrix was not invertible when using the closed form formula from least squares, we chose the ridge regression and tried several values for the regularization parameter lambda. The latter's optimal value ended up being quite small, i.e around 3.6*e-07. In order to compute a good approximation of the lambda we split the train data set that was given and for which we already had the predictions into a new training and a validation set. We then ran ridge regression computing a solution for the new training set for each lambda between two bounds and using it on the validation set in order to know how well chosen the parameter was. The figure below illustrates this process \ref{fig:training-and-validation-set-accuracy}. Finally, gradient descent did not seem to improve the result, on the contrary we obtained lower accuracies.
 
 \begin{figure}[h!]
 	\centering
@@ -52,30 +66,11 @@ The logistic regression seemed to be inefficient on the data set since the maxim
   \caption{The training and validation set accuracy}
 	\label{fig:training-and-validation-set-accuracy}
 \end{figure}
+
 \section{Conclusion}
-In conclusion, we started with a $66\%$ accuracy with no feature processing because of the unbalanced data. Then, we managed to up it to $78\%$ by analyzing data and processing the features, as explained in section \ref{sec:feature-engineering}. Then we got up to $82\%$ by adding feature expansion and validation, as described in section \ref{sec:model-choosing}. We use linear regression and based on our observations, we concluded that feature engineering is really the key to have a more successful classifier, the algorithm comes next. We unfortunately underestimated the importance of cleaning and processing the data. We lost a bit of time in the beginning, because we were trying to change the algorithm we run instead to have better results instead of changing the input.
+In conclusion, we started with a $66\%$ accuracy with no feature processing because of the unbalanced data. Then, we managed to up it to $78\%$ by analyzing data and processing the features, as explained in section \ref{sec:feature-engineering}. Then we got up to $82\%$ by adding feature expansion and validation, as described in section \ref{sec:feature-expansion}. We use linear regression and based on our observations, we concluded that feature engineering is really the key to have a more successful classifier, the algorithm comes next. We unfortunately underestimated the importance of cleaning and processing the data. We lost a bit of time in the beginning, because we were trying to change the algorithm we run instead to have better results instead of changing the input.
 
 \section{Further improvements}
 To further improve the results we could try using other algorithms. We also noticed that some features have more unknown values to known values; some features look like uniform distribution or look like they don't give any information on the classification. We could try removing some of these features to reduce complexity. We could also dive into the actual physics behind the Higgs boson to have a better idea about what the best feature expansion looks like; we could try to add features that are redundant in the physics theory behind Higgs boson. There is always a lot more that can be done when working with machine learning, these are some clues we had while working on this project.
-
-\begin{enumerate}
-	\item{Copied 6 function we have to return from the labs}
-	\item{Changed the functions we copied from the labs such that they always assume that vectors are represented in (N,1)}
-	\item{Plotted distributions of features to gain insight}
-	\item{Gradient descent on data to see what's going on}
-	\item{Try to remove features based on the plots, the ones that look like they don't add anything}
-	\item{Logistic regression, see if results make sense}
-	\item{Try polynomial expansion to have better accuracy}
-	\item{Try polynomial expansion with cross products to have better accuracy}
-	\item{Realize that the weird distributions of many features with extreme variance are most likely due to the fact that -999 values are unknown values. Seems weird that many of the values are around zero, and many of them are exactly -999}
-	\item{Normalize data without taking into account the -999 values, and set -999 values to 0. Such that they shouldn't affect the result as when 0 will be multiplied with the weight it'll be 0, i.e. not contribute.}
-	\item{Re-plotted the distributions of the features after normalizing and removing the -999 values}
-	\item{Notice that some plots look like uniform distribution or clearly don't give us insight on the result. => can remove them to have faster algorithm (NOT DONE YET)}
-	\item{When plotting the distributions of features without unknown values we noticed something very strange: all of the distributions are continuous except one! It only has 4 values}
-	\item{We thought that maybe this value is some sort of category, thus maybe we should treat them differently => we trained them separately, we separate them in 4 categories based on that feature and train them separately}
-	\item{Trained the model that way with linear regression (no expansion), obtained much better results}
-	\item{Tried logistic regression but results weren't as good}
-	\item{Tried to add feature expansion, square and sqrt (without cross products)}
-\end{enumerate}
 
 \end{document}
