Small tweaks report

--- a/latex-report/report.tex
+++ b/latex-report/report.tex
@@ -58,7 +58,7 @@ Then we managed to get to $82\%$ accuracy on training and testing by adding feat
 The ones that gave the best results were: cosinus, sinus, degree 4 and square root. Thus, we used these for feature expansion.
 
 \section{Model choosing}
-The logistic regression seemed to be inefficient on the data set since the maximum value we obtained was around $71\%$. Therefore, we decided to opt for a linear regression model. Since the matrix was not invertible when using the closed form formula from least squares, we chose the ridge regression and tried several values for the regularization parameter lambda. The latter's optimal value ended up being quite small, i.e around 3.6*e-07. In order to compute a good approximation of the lambda we split the train data set that was given and for which we already had the predictions into a new training and a validation set. We then ran ridge regression computing a solution for the new training set for each lambda between two bounds and using it on the validation set in order to know how well chosen the parameter was. The figure below illustrates this process \ref{fig:training-and-validation-set-accuracy}. Finally, gradient descent did not seem to improve the result, on the contrary we obtained lower accuracies.
+The logistic regression seemed to be inefficient on the data set since the maximum value we obtained was around $71\%$. Therefore, we decided to opt for a linear regression model. Since the matrix was not invertible when using the closed form formula from least squares, we chose the ridge regression and tried several values for the regularization parameter lambda. The latter's optimal value ended up being quite small, i.e around $3.6 \times 10^{-7}$. In order to compute a good approximation of the lambda we split the train data set that was given and for which we already had the predictions into a new training and a validation set. We then ran ridge regression computing the weights for the training set for each lambda between two bounds and using it on the validation set in order to know what the best lambda is. The figure below illustrates this process \ref{fig:training-and-validation-set-accuracy}. Finally, gradient descent did not seem to improve the result, on the contrary we obtained lower accuracies.
 
 \begin{figure}[h!]
 	\centering
